# srulys-agent-packs

./: .gitignore  .roomodes  README.md  eval.cmd  init.cmd  package-lock.json
.github/: copilot-instructions.md
.github/plugin/: marketplace.json
agent-packs/eval-pilot/engine/: .gitignore  README.md  pyproject.toml
agent-packs/eval-pilot/engine/src/evalpilot/: __init__.py  asserts.py  cli.py  config.py  discovery.py  judge.py  metrics.py  pytest_plugin.py  rubric.py  workspace.py
agent-packs/eval-pilot/engine/src/evalpilot/_data/templates/: .gitignore  pyproject.toml
agent-packs/eval-pilot/engine/src/evalpilot/_data/templates/_metrics/: README.md
agent-packs/eval-pilot/engine/src/evalpilot/_data/templates/packs/_example/: test_example_rubric.py
agent-packs/eval-pilot/engine/src/evalpilot/_data/templates/skills/_example/: test_example_metric.py
agent-packs/eval-pilot/engine/src/evalpilot/runners/: __init__.py  base.py  copilot.py
agent-packs/eval-pilot/engine/tests/: test_engine.py
docs/: README.md  agentic-developer.md  context-packs.md  copilot-factory.md  customer-sentiment-analysis.md  example-pack.md  factory.md  product-feedback-gatherer.md  ralph-copilot-cli.md  roo-agent-factory.md  saas-design-studio.md  simple-agent-factory.md  spec-creator.md
eval_engine/: README.md  __main__.py
evals/: .gitignore  MIGRATION_NOTES.md  README.md  conftest.py  pyproject.toml  requirements.txt
evals/_lib/: __init__.py  (+4 more)
installer/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
scripts/: lint_pack.py  run-judges.ps1  run_evals.py
(+773 files in other folders)
